--- a/arch/arm64/configs/tissot-perf_defconfig
+++ b/arch/arm64/configs/tissot-perf_defconfig
@@ -366,6 +366,7 @@ CONFIG_LIMITS_LITE_HW=y
 CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
+CONFIG_WCD9330_CODEC=y
 CONFIG_WCD9335_CODEC=y
 CONFIG_SND_SOC_MSM8X16_WCD=y
 CONFIG_SND_SOC_WCD_MBHC=y
