--- a/arch/arm64/configs/tissot-perf_defconfig
+++ b/arch/arm64/configs/tissot-perf_defconfig
@@ -221,6 +221,8 @@ CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 CONFIG_MSM_BT_POWER=y
+CONFIG_MSM_XPU_ERR_FATAL=y
+# CONFIG_MSM_XPU_ERR_NONFATAL is not set
 CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
